# ClionRubiks

./: CMakeLists.txt  GenericRubiksCube.h  main.cpp
Model/: GenericRubiksCube.cpp  GenericRubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
Solver/: BFSSolver.h  DFSSolver.h  IDDFSSolver.h
